force-app/main/default/objects/msmxSheet__MsmxSheet__c/msmxSheet__MsmxSheet__c.object-meta.xml
<CustomObject>
    <label>Mashmatrixシート</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>