force-app/main/default/objects/msmxSheet__MsmxSheet__c/fields/msmxSheet__Book__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__Book__c</fullName>
    <label>Book</label>
    <referenceTo>msmxSheet__MsmxBook__c</referenceTo>
    <relationshipLabel>Sheets</relationshipLabel>
    <relationshipName>Sheets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>