force-app/main/default/objects/msmxSheet__MsmxSheet__c/fields/msmxSheet__Config__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__Config__c</fullName>
    <label>Config</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>